--- a/package.json
+++ b/package.json
@@ -12,30 +12,33 @@
     "@ensdomains/thorin": "^0.6.44",
     "@vercel/kv": "^1.0.0",
     "@web3modal/wagmi": "^3.3.2",
+    "autoprefixer": "10.4.16",
     "bufferutil": "^4.0.8",
     "dexie": "^3.2.4",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.3",
     "ethers": "6.8.1",
     "formidable": "^3.5.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "openpgp": "^5.11.0",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "siwe": "^2.1.4",
     "styled-components": "^5.3.3",
+    "tailwindcss": "3.3.5",
     "vercel": "^32.5.4",
     "viem": "^1.19.1",
     "wagmi": "^1.4.7",
-    "web3.storage": "^4.5.5",
+    "web3.storage": "^4.5.5"
+  },
+  "devDependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "20.8.10",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.3",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.5",
+    "@types/styled-components": "^5.1.30",
     "typescript": "5.2.2"
   }
 }
