--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3modal/wagmi": "^3.3.2",
     "autoprefixer": "10.4.16",
     "bufferutil": "^4.0.8",
+    "dayjs": "^1.11.10",
     "dexie": "^3.2.4",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.3",
