--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ensdomains/thorin": "^0.6.44",
     "@vercel/kv": "^1.0.0",
+    "@web3-storage/w3up-client": "^12.4.1",
     "@web3modal/wagmi": "^3.3.2",
     "autoprefixer": "10.4.16",
     "bufferutil": "^4.0.8",
@@ -29,7 +30,7 @@
     "siwe": "^2.1.4",
     "styled-components": "^5.3.3",
     "tailwindcss": "3.3.5",
-    "vercel": "^32.5.4",
+    "vercel": "^32.7.2",
     "viem": "^1.19.1",
     "wagmi": "^1.4.7",
     "web3.storage": "^4.5.5"
